retrieveUnpackaged/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Complaint Process</fullName>
        <description>The Complaint Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Action-Required</fullName>
        </values>
        <values>
            <fullName>Closed-Duplicate-Complaint</fullName>
        </values>
        <values>
            <fullName>Closed-Not Resolved</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Released-to-Complaint Manager</fullName>
        </values>
        <values>
            <fullName>Resolved-Other</fullName>
        </values>
        <values>
            <fullName>Resolved-explant</fullName>
        </values>
        <values>
            <fullName>Resolved-external-equipment-exchange</fullName>
        </values>
        <values>
            <fullName>Resolved-information-provided</fullName>
        </values>
        <values>
            <fullName>Resolved-medical-treatment</fullName>
        </values>
        <values>
            <fullName>Resolved-programming</fullName>
        </values>
        <values>
            <fullName>Resolved-without-intervention</fullName>
        </values>
        <values>
            <fullName>To be verified by Complaint Manager</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AffectedPatient__c</fullName>
        <description>/ Affected Patient in case of a complaint</description>
        <label>Affected Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AwarenessDate__c</fullName>
        <description>/ when did we know about it, complaint manager is involved first. 4 day period starts to run</description>
        <label>Date First Aware</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ComplaintClassification__c</fullName>
        <description>/</description>
        <label>Complaint Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Class 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContactInformation__c</fullName>
        <label>Contact Information</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Reporter&apos;s Center / Facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <description>/</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EquipmentMaterialNumber__c</fullName>
        <description>/</description>
        <formula>Equipment__r.Material__r.MaterialNumber__c</formula>
        <label>Material Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <description>/ The Implant or Processor device</description>
        <label>Serial Number</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FollowUpAction__c</fullName>
        <label>Follow-up Action</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ImplantType__c</fullName>
        <description>/</description>
        <label>Implant Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cochlear Implant</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Middle Ear Implant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InvolveExplant__c</fullName>
        <description>/</description>
        <label>Involve Potential Device Explant</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IssueDate__c</fullName>
        <description>/ When did the event happen (dropping sound)</description>
        <label>Issue / Event Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <description>/</description>
        <label>Model Number</label>
        <referenceTo>Material__c</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NetRegID__c</fullName>
        <description>/</description>
        <label>Net Regulus ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimarySymptomCode__c</fullName>
        <description>Primary Symptom Classification Code according toe Code List</description>
        <label>Symptom Category</label>
        <picklist>
            <picklistValues>
                <fullName>Accessory Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battery / Charger Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinician Programming Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Headpiece Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implantable Cochlear Stimulator Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sound Processor Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgical Equipment Issues</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Public__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicating whether this Complaint is visible to all users or not</description>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReportingPatient__c</fullName>
        <description>/ Patient that reported this complaint</description>
        <label>Reported by Patient or</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Complaints (Reported By Patient)</relationshipLabel>
        <relationshipName>R00NM0000000K3z3MAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReturnOrder__c</fullName>
        <description>/ No, Return, Relacement</description>
        <label>Return Order</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return for Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SecondarySymptomCode__c</fullName>
        <description>Depending Picklist</description>
        <label>Symptom Code</label>
        <picklist>
            <controllingField>PrimarySymptomCode__c</controllingField>
            <picklistValues>
                <fullName>1042 / ACC-AA Pak Borken Cable at Housing (No Return) / A30 / Complaint - Non Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1042 / ACC-AA Pak Borken Cable at Huggie (No Return) / A30 / Complaint - Non Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>900	/ ACC-broken,cracked / A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1423 / B/C-Battery Fit problem -loose/tight	/ A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>914	/ B/C-Battery life-charge problem / A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1401 / CABLE-Bent/broken pins / A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1045 / CABLE-Cable clip malfunction / A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4111 / ACC-Carrying Case-Pouch issues / A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1367 / ACC-Hardware not functioning / A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1368 / ACC-Intermittent / A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>889 / ACC-Other / A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3833 / ACC-Out-of-Box Failure / A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>890 / ACC-Size not right / A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>892 / ACC-Sound quality / A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1385 / ACC-Visible damage / A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1400 / B/C-Bent/broken pins / A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>926 / B/C-Charger LED problem / A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1391 / B/C-Corrosion / A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1407 / B/C-Hardware got wet / A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1371 / B/C-Hardware not functioning / A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1395 / B/C-Hardware warm/hot / A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>932 / B/C-Intermittent / A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4113 / B/C-OEPO problem / A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>925 / B/C-Other / A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3834 / B/C-Out-of-Box Failure / A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1386 / B/C-Visible damage-Discoloration-Cosmetic issue / A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1372 / CABLE-Discolored / A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1042 / CABLE-Frayed or broken cable / A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1373 / CABLE-Hardware not functioning / A11 / Complaint - Product related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1047 / CABLE-Intermittent / A11 / Complaint - Product related</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SoftwareType__c</fullName>
        <description>/</description>
        <label>Software Type/Version</label>
        <picklist>
            <picklistValues>
                <fullName>BEPSNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSPOM1.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SClin1.08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SoundWave1.4.077</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SoundWave1.4.098</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SoundWave1.6.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SoundWave1.6.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SoundWave2.0.27</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>Equipment__c</columns>
        <columns>Material__c</columns>
        <columns>ReturnOrder__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>AffectedPatient__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Complaints</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>PotentialDeviceExplant</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>InvolveExplant__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>Equipment__c</columns>
        <columns>EquipmentMaterialNumber__c</columns>
        <columns>ReturnOrder__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>AffectedPatient__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>InvolveExplant__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Potential Device Explant</label>
    </listViews>
    <recordTypes>
        <fullName>Complaint</fullName>
        <active>true</active>
        <businessProcess>Complaint Process</businessProcess>
        <label>Complaint</label>
    </recordTypes>
    <validationRules>
        <fullName>MandatoryComplaintReporter</fullName>
        <active>true</active>
        <description>Either a Patient, a Contact or a Clinic needs to be set as the reporter of a complaint</description>
        <errorConditionFormula>AND ( ISBLANK(ReportingPatient__c ) , ISBLANK( ContactId ) ,ISBLANK( Customer__c  ) )</errorConditionFormula>
        <errorMessage>Please enter either the reporting patient, the reporting contact or the reporting center/clinic</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MandatorySymptomCodes</fullName>
        <active>true</active>
        <description>if the equipment number is filled in, the symptom codes are mandatory, otherwise not</description>
        <errorConditionFormula>AND ( NOT( ISBLANK( Equipment__c ) ) , OR ( ISBLANK( TEXT(PrimarySymptomCode__c) ) , ISBLANK( TEXT(SecondarySymptomCode__c ))  ) )</errorConditionFormula>
        <errorMessage>Please enter the Symptom Category and the Symptom Code for the selected Serial Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SymptomInfoWithoutSerialNumber</fullName>
        <active>true</active>
        <description>The symptom information should not be entered without choosing a serial number</description>
        <errorConditionFormula>AND( ISBLANK( Equipment__c  ), NOT(ISBLANK( TEXT(PrimarySymptomCode__c)  )) )</errorConditionFormula>
        <errorMessage>A Symptom Category and Code should only be selected if also a Serial Number has been entered</errorMessage>
    </validationRules>
</CustomObject>